--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ header {
   padding: 0px;
   margin: 0px;
   text-align: center;
+  color:aquamarine
 }
 
 h2{font-size:16px}
@@ -26,7 +27,7 @@ r{color:rgb(0, 17, 128)}
 body {
   margin: 1rem;
   font-family: sans-serif;
-
+  background-color: black;
   line-height: 1.5;
 }
 
